2006-04-09  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua (accept_testresult_change): s/MT/_MTN/, thanks to
	Alex Queiroz for the catch...

2006-04-08  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Finish paragraph that stopped in the

2006-04-08  Nathaniel Smith  <njs@pobox.com>

	* configure.ac, debian/changelog, win32/monotone.iss: 
	* monotone.spec: Bump version number to 0.26.
	* NEWS: Insert release time.

2006-04-08  Timothy Brownawell  <tbrownaw@gmail.com>

	* commands.cc (process_netsync_args): fix crash when calling netsync
	with an --exclude but no include argument.
	* tests/t_netsync_no_include.at: netsync with --exclude but no
	include should E(), not I().
	* testsuite.at: call it

2006-04-08  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi: Several little content improvements, scattered
	throughout.
	(Automation): Document new rev and manifest formats.  Document new
	packet commands.
	* database_check.cc: Add a comment to warn people that there are
	detailed docs on this, so if they add new stuff they'll want to
	add new docs too.
	* automate.cc (automate_get_manifest_of, automate_get_revision):
	Re-sync docs to manual.
	(automate_packet_for_fdata): Fix copy/paste error in error
	message.

2006-04-08  Nathaniel Smith  <njs@pobox.com>

	* netxx/resolve_gethostbyname.cxx (resolve_hostname): #ifdef out
	Win32-incompatible error reporting call.

2006-04-08  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc, annotate.cc: Turn all ticker labels from _() to
	N_(), to match Benoît's changes to the ticker class.

2006-04-08  Nathaniel Smith  <njs@pobox.com>

	* AUTHORS: Add Thomas Keller.

2006-04-08  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (distcleancheck_listfiles): Third time's
	the... charm?

2006-04-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.cc: Oops, needed to include
	boost/filesystem/convenience.hpp too.

	* monotone.cc (cpp_main): Exclude .exe extension by using
	fs::basename rather than path.leaf().
