@@ -960,6 +960,7 @@ automate_get_revision(std::vector<utf8> args,
   if (args.size() > 1)
     throw usage(help_name);
 
+  temp_node_id_source nis;
   revision_data dat;
   revision_id ident;
 
@@ -971,7 +972,8 @@ automate_get_revision(std::vector<utf8> args,
       app.require_workspace(); 
       get_unrestricted_working_revision_and_rosters(app, rev, 
                                                     old_roster, 
-                                                    new_roster);
+                                                    new_roster,
+                                                    nis);
       calculate_ident(rev, ident);
       write_revision_set(rev, dat);
     }
@@ -1039,12 +1041,13 @@ automate_get_manifest_of(std::vector<utf8> args,
   data dat;
   manifest_id mid;
   roster_t old_roster, new_roster;
+  temp_node_id_source nis;
 
   if (args.size() == 0)
     {
       revision_set rs;
       app.require_workspace();
-      get_unrestricted_working_revision_and_rosters(app, rs, old_roster, new_roster);
+      get_unrestricted_working_revision_and_rosters(app, rs, old_roster, new_roster, nis);
     }
   else
     {
